# Sonic-CD-Decompilation

./: .gitmodules  CMakeLists.txt  README.md
src/: ACTION.C  ACTION.H  ACTSET.C  ACTSET.H  BLOCK.C  BLOCK.H  BMP.C  BRANKO1.C  BRANKO1.H  DAI_K.C  DAI_K.H  DAI_RD1.C  DAI_RD1.H  DIRCOL.C  DIRCOL.H  DLLMAIN.C  DLLMAIN.H  DUMMY.C  DUMMY.H  EDIT.C  EDIT.H  EMIE1.C  EMIE1.H  EMIE1CG.C  ENEMY.C  ENEMY.H  EQU.C  EQU.H  ET1.C  ET1.H  ETC.C  ETC.H  FCOL.C  FCOL.H  GAME.C  GAME.H  GOAL.C  GOAL.H  IMPFUNCS.H  IO.C  (+41 more)
src/CHEDGEHOG/: audio.c  audio.h  cmp.c  cmp.h  cmpbmp.c  cmpbmp.h  cmpbmpheader.h  cmpheader.h  cmpspritemeta.h  cmptilemeta.h  constants.h  extractedbitmap.h  pcminfo.h  soundchannel.h  spriteinfo.h  sprites.c  sprites.h  szdd.c  szdd.h  tiles.c  tiles.h  util.c  util.h
src/LAUNCHER/: COMMON.H  IO.C  IO.H  LZSS.C  LZSS.H  MAIN.C  SOUND.C  SOUND.H  SZDD.C  SZDD.H
src/R1/: ACT11A.C  ACT11A.H  ACT11B.C  ACT12A.C  ACT13C.C  BOSS_1.C  BOSS_1.H  COL1A.C  COL1A.H  COL1B.C  COL1B.H  COL1C.C  COL1C.H  COL1D.C  COLI1.C  COLI1.H  DEV11A.C  DEV11D.C  DEV12D.C  EDTBL11A.C  EDTBL11B.C  EDTBL11C.C  EDTBL11D.C  EDTBL12A.C  EDTBL12B.C  EDTBL12C.C  EDTBL12D.C  EDTBL13C.C  FRIEND1.C  FRIEND1.H  KOWASI1.C  KOWASI1.H  KUZUR11A.C  KUZUR11B.C  KUZUR11C.C  KUZUR12B.C  KUZUR12D.C  KUZURE.C  KUZURE.H  MOVIE1.C  (+35 more)
src/R3/: ACT31A.C  ACT31B.C  ACT32A.C  ACT33C.C  BANPA.C  BANPA.H  BOBIN.C  BOBIN.H  BOBINB.C  BOBINB.H  BOSS_3.C  BOSS_3.H  COL3A.C  COL3A.H  COL3B.C  COL3B.H  COL3C.C  COL3C.H  COL3D.C  COL3D.H  COLI3.C  DEV31C.C  DEV32A.C  DEV32A.H  DEV32C.C  DEV32D.C  EDTBL31A.C  EDTBL31B.C  EDTBL31C.C  EDTBL32A.C  EDTBL32B.C  EDTBL32C.C  EDTBL32D.C  EDTBL33C.C  ET3.C  FRIEND3.C  FRIEND3.H  GA3.C  GA3.H  GATE.C  (+55 more)
src/R4/: ACT41A.C  ACT41B.C  ACT41C.C  ACT42A.C  ACT42B.C  ACT42C.C  ACT43C.C  AMENBO.C  AMENBO.H  AWA.C  AWA.H  BANEIWA.C  BANEIWA.H  BOSS_4.C  BOSS_4.H  BOSS_4_2.C  BOSS_4_2.H  BRUNKO4.C  BRUNKO4.H  COL4A.C  COL4A.H  COL4B.C  COL4C.C  COL4D.C  COLI4.C  COLI4.H  DAID4.C  DAID4.H  DEV41A.C  EDTBL41A.C  EDTBL41B.C  EDTBL41C.C  EDTBL42A.C  EDTBL42B.C  EDTBL42C.C  EDTBL43C.C  ESCAL4.C  ESCAL4.H  ET4.C  FRIEND4.C  (+97 more)
src/R5/: ACT51A.C  ACT51A.H  ACT53.C  BELTSW5.C  BELTSW5.H  BOSS_5.C  BOSS_5.H  BURANKO5.C  BURANKO5.H  COL5A.C  COL5A.H  COL5B.C  COL5C.C  COL5D.C  COLI5.C  DAI_RD5.C  DAI_RD5.H  DENDEN.C  DENDEN.H  EDTBL5.C  EDTBL53.C  ET5.C  ET5.H  FRIEND5.C  GAME5.C  GAME5.H  HARI5F.C  HARI5F.H  HARIR5.C  HARIR5.H  HASHI5.C  HASHI5.H  HASIRA5.C  HASIRA5.H  IWA5.C  IWA5.H  IWA5ROLL.C  IWA5ROLL.H  IWA5WAVE.C  IWA5WAVE.H  (+41 more)
src/R6/: ACT61A.C  ACT61A.H  ACT62A.C  ACT63.C  BATTA.C  BATTA.H  BEEM6.C  BEEM6.H  BLOCK6.C  BLOCK6.H  BOSS_6.C  BOSS_6.H  COL6A.C  COL6A.H  COL6B.C  COL6B.H  COL6C.C  COL6C.H  COL6D.C  COLI6.C  COLI6.H  DAIR6.C  DAIR6.H  DEV61A.C  DEV61B.C  DEV61C.C  DEV61D.C  DEV62A.C  DEV62B.C  DEV62C.C  DEV62D.C  DEV63C.C  DEV63D.C  EDTBL61A.C  EDTBL61B.C  EDTBL61C.C  EDTBL62A.C  EDTBL62B.C  EDTBL62C.C  EDTBL62D.C  (+62 more)
src/R7/: ACT71A.C  ACT73.C  BOSS_7.C  BOSS_7.H  BRANKO7.C  BRANKO7.H  CHGBAN.C  CHGBAN.H  CHGWALL7.C  CHGWALL7.H  COL7A.C  COL7B.C  COL7C.C  COL7D.C  COLI7.C  DANGO7.C  EDTBL7.C  EDTBL73.C  EMIE7.C  EMIE7.H  EMIE7CG.C  ET7.C  FRIEND7.C  GAITOU73.C  GAITOU73.H  HARI73.C  HARI73.H  HOTARU7.C  HOTARU7.H  KABASIRA.C  KABASIRA.H  KANABUN.C  KANABUN.H  MOVIE7.C  MOVIE7.H  PLAYSP7.C  PLAYSP7.H  SCR71A.C  SCR71A.H  SCR71B.C  (+31 more)
src/R8/: ACT81A.C  ACT82A.C  ACT83.C  BEAM.C  BEAM.H  BIGBOM8.C  BIGBOM8.H  BOSS_8.C  BOSS_8.H  COL8A.C  COL8A.H  COL8B.C  COL8B.H  COL8C.C  COL8C.H  COL8D.C  COL8D.H  COLI8.C  DAI8.C  DAI8.H  DANGO8.C  DANGO8.H  DEV81A.C  DEV81A.H  DEV81C.C  DEV81D.C  DEV82A.C  DEV82B.C  DEV82C.C  DEV82D.C  DEV83C.C  DEV83D.C  EDTBL81.C  EDTBL82.C  EDTBL83.C  EMIE8.C  EMIE8.H  ET8.C  FRIEND8.C  FRIEND8.H  (+75 more)
src/SPECIAL/: ACT_S.C  ACT_S.H  BACT.C  BACT.H  BMP.C  COLI_S.C  COLI_S.H  COMMON.C  COMMON.H  DATA_S1.C  ENS.C  ENS.H  ETC_M.C  ETC_M.H  ETC_S.C  ETC_S.H  FADEIN.C  FADEIN.H  GAME.C  GAME.H  KAITEN.C  KAITEN.H  PLS.C  PLS.H  SIN.C  SIN.H  SPM_EQU.C  SPM_EQU.H  SPS_EQU.C  SPS_EQU.H
src/TITLE/AVIGOOD/: AVIGODDO.C  AVIGODDO.H  AVIGODEN.C  AVIGODEN.H
src/TITLE/AVIOPEN/: AVIOPNDO.C  AVIOPNDO.H  AVIOPNEN.C  AVIOPNEN.H
src/TITLE/BESTTIME/: BESENTRY.C  BESTBMP.C  BESTDO.C  BESTDO.H  BESTGRID.C  BESTITEM.C  BESTITEM.H  BESTPALT.C  BESTSPRT.C  BESTSPRT.H
src/TITLE/COMMON/: ENGINE_DLL.H  GRID.H  HMX_OEEACTL.C  HMX_OEEACTL.H  HMX_TYPES.H  LD_TYPES.H  PALT.H  SCORE_DATA_TYPES.H  SPRITE_PATTERN_TYPES.H
src/TITLE/OPENING/: OPNBMP.C  OPNDO.C  OPNDO.H  OPNENTRY.C  OPNENTRY.H  OPNGRID.C  OPNPALT.C
src/TITLE/PLANET/: ACTM.C  ACTM.H  ASCIISET.C  ASCIISET.H  ASCMAP.C  CHAMOV.C  CHAMOV.H  DATA_M.C  ETC.C  ETC.H  FLASH.C  FLASH.H  KAITEN.C  KAITEN.H  LPLMAIN.C  LPLMAIN.H  LPL_TYPES.H  PALET.C  PLM.C  PLM.H  PLS.C  PLS.H  SPM_EQU.C  SPM_EQU.H  SPS_EQU.C  SPS_EQU.H
src/TITLE/SAVEDATA/: SVDBMP.C  SVDBMP.H  SVDDO.C  SVDDO.H  SVDEDIT.C  SVDEDIT.H  SVDENTRY.C  SVDENTRY.H  SVDFILE.C  SVDFILE.H  SVDGRID.C  SVDMENU.C  SVDMENU.H  SVDPALT.C  SVDSPRT.C  SVDSPRT.H
src/TITLE/SOUNDTST/: SNDBMP.C  SNDDO.C  SNDDO.H  SNDENTRY.C  SNDENTRY.H  SNDGRID.C  SNDPALT.C  SNDSPRT.C  SNDSPRT.H
src/TITLE/STAGETST/: STGBMP.C  STGDO.C  STGDO.H  STGENTRY.C  STGENTRY.H  STGGRID.C  STGITEM.C  STGITEM.H  STGPALT.C  STGSPRT.C  STGSPRT.H
src/TITLE/TA/: FADEIN.C  TA.C  TA.H  TACOLOR.C  TACOLOR.H  TAEACTRL.C  TAEACTRL.H  TA_TYPES.H
src/TITLE/THANKS/: ACT.C  ACT.H  BM_M.C  BM_M.H  CHRSET.C  CHRSET.H  DATA_SP.C  ETC_M.C  ETC_M.H  FADE.C  FADE.H  GAME.C  GAME.H  IO.C  IO.H  SPM.C  SPM.H  SPRMOVE.C  SPRMOVE.H  THANKS_TYPES.H
src/TITLE/VISUALMD/: VMDBMP.C  VMDDO.C  VMDDO.H  VMDENTRY.C  VMDENTRY.H  VMDGRID.C  VMDPALT.C  VMDSPRT.C  VMDSPRT.H
src/WARP/: WARP.C  WARP.H
src/WINEXE/: BMP.C  BMP.H  CDAUDIO.C  CDAUDIO.H  DECOMPRESS.C  DECOMPRESS.H  DINO2D.H  DLL.C  DLL.H  DMIX.H  GRAPHICS.C  GRAPHICS.H  MAIN.C  RESOURCE.H  RESOURCE.RC  SCORE.C  SCORE.H  SPLASH.C  SPLASH.H  TYPES.H  WAVE.C  WAVE.H  WAVE2.C  WAVE2.H  WINMAIN.C  WINMAIN.H
